# struct-writer

./: Cargo.toml
rust_src/: definitions.rs  error.rs  generate.rs  lib.rs  main.rs  struct_parse.rs  templating.rs
rust_src/default_templates/: c.rs  mod.rs  rust_lang.rs  scala.rs
rust_src/render/: c.rs  mod.rs  rust_lang.rs  scala.rs
rust_tests/: integration.rs
