[package]
name = "struct-writer"
version = "0.1.0"
edition = "2021"
description = "Generate C, Rust, and Scala binary-serialization code from TOML/JSON/YAML API specs"

[lib]
path = "rust_src/lib.rs"

[[bin]]
name = "struct-writer"
path = "rust_src/main.rs"

[[test]]
name = "integration"
path = "rust_tests/integration.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
regex = "1"

[dev-dependencies]
